# modern-devcontainer-fastapi-mongo

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Readme.MD  docker-compose.debug.yml  docker-compose.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  post-create.sh
app/: __init__.py  config.py  main.py
app/internal/: __init__.py  db.py
app/repositories/: __init__.py  base_repo.py
app/seed/: users.json
app/services/: base_service.py
